# python-cli-pypi-publishing

./: LICENSE  README.md  entry.py  pyproject.toml
