[tool.poetry]
name = "dummy-python-cli"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT-0"
readme = "README.md"
packages = [{include = "dummy_python_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
APPLICATION-NAME = 'entry:main'
